file loadData inseriti

--- a/src/loadDataForm.html
+++ b/src/loadDataForm.html
@@ -47,8 +47,8 @@
             </p>
         </div>
 
-        <script src="../src/js/web3.min.js"></script>
-        <script src="../src/js/truffle-contract.js"></script>
-        <script src="loadData.js"></script>
+        <script src="js/web3.min.js"></script>
+        <script src="js/truffle-contract.js"></script>
+        <script src="js/loadData.js"></script>
     </body>
 </html>
