--- a/src/loadDataForm.html
+++ b/src/loadDataForm.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+        
         <title>Load Data</title>
         <style>
             .container{
@@ -16,11 +16,8 @@
                 margin-bottom: 1em;
                 font-size: 2.5em;
             }
-            form{
-                width: 100%;
+            #loadButton{
                 margin-top: 2em;
-            }
-            form > button{
                 font-size: 2em;
                 padding: 0.4em  1em;
             }
@@ -35,9 +32,7 @@
             <h1 class="title"> PRESS THE BUTTON TO LOAD DATA INTO THE BLOCKCHAIN </h1>
             <hr/>
             <br/>
-            <form id="loadForm" onSubmit="LoadData.load();" > 
-                <button type="submit" class="btn btn-primary">LOAD</button>
-            </form>
+            <button id="loadButton" onclick="LoadData.load();">LOAD</button>
 
             <p class="message" id="correct" hidden>
                 Elements correctly loaded!
@@ -47,6 +42,7 @@
             </p>
         </div>
 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script src="js/web3.min.js"></script>
         <script src="js/truffle-contract.js"></script>
         <script src="js/loadData.js"></script>
