push test prezzo in mint composable

--- a/src/read-csv.html
+++ b/src/read-csv.html
@@ -51,7 +51,7 @@
             <hr/>
             <h1 class="title"> Press the button to load data into the Blockchain </h1>
             <br/>
-            <button id="loadButton" onclick="LoadData.load(watches, components);">LOAD</button>
+            <button id="loadButton" onclick="LoadData.load(watches, components);" hidden>LOAD</button>
             
             <p class="message" id="correct" hidden>
                 Elements correctly loaded!
