--- a/src/homepage.html
+++ b/src/homepage.html
@@ -38,7 +38,7 @@
           <a href="homepage.html" class="navbar-brand d-flex align-items-center">
             <strong>Album Watch</strong>
           </a>
-          <a href="personal_area.html" class="btn btn-outline-light" role="button">
+          <a href="personal_area.html" class="btn btn-outline-light btn-personal-area" role="button">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-watch" viewBox="0 0 16 16">
               <path d="M8.5 5a.5.5 0 0 0-1 0v2.5H6a.5.5 0 0 0 0 1h2a.5.5 0 0 0 .5-.5V5z"/>
               <path d="M5.667 16C4.747 16 4 15.254 4 14.333v-1.86A5.985 5.985 0 0 1 2 8c0-1.777.772-3.374 2-4.472V1.667C4 .747 4.746 0 5.667 0h4.666C11.253 0 12 .746 12 1.667v1.86a5.99 5.99 0 0 1 1.918 3.48.502.502 0 0 1 .582.493v1a.5.5 0 0 1-.582.493A5.99 5.99 0 0 1 12 12.473v1.86c0 .92-.746 1.667-1.667 1.667H5.667zM13 8A5 5 0 1 0 3 8a5 5 0 0 0 10 0z"/>
@@ -61,7 +61,10 @@
       <div class="album py-5 bg-light">
         <div class="container">
 
-          <div class="row">
+          <div id="watchesRow" class="row">
+            <!--watchs load here-->
+          </div>
+          <!-- <div class="row">
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
                 <img class="card-img-top imgAlbum" src="images/rolex1.jpg" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
@@ -71,7 +74,8 @@
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    </div>                    
+                    </div>   
+                    <button type="button" class="btn btn-sm btn-outline-secondary" style="float: right;">Buy</button>                 
                   </div>
                 </div>
               </div>
@@ -149,7 +153,29 @@
                 </div>
               </div>
             </div>
+          </div> -->
+        </div>
+
+        <div id="watchTemplate" sytle="display; none;">
+          <div class="col-md-4">
+            <div class="card mb-4 box-shadow card-watch">
+              <img class="card-img-top imgAlbum" src="images/rolex1.jpg" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Watch Name</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Model Name</h6>
+                <p class="text-watch">Description</p>
+                <p class="price-watch">Price $</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <button id="btn-view" type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                  </div>   
+                  <button id="btn-buy" type="button" class="btn btn-sm btn-outline-secondary" style="float: right;" data-id="0">Buy</button>                 
+                </div>
+              </div>
+            </div>
           </div>
+        </div>
+        
         </div>
       </div>
 
