--- a/src/personal_area.html
+++ b/src/personal_area.html
@@ -59,9 +59,8 @@
 
       <div class="album py-5 bg-light">
         <div class="container">
-
-          <div class="row">
-            <div class="col-md-4">
+          <div id="personalRow" class="row">
+            <!-- <div class="col-md-4">
               <div class="card mb-4 box-shadow">
                 <img class="card-img-top imgAlbum" src="images/rolex1.jpg" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
                 <div class="card-body">
@@ -87,6 +86,22 @@
                     </div>                   
                   </div>
                 </div>
+              </div>
+            </div> -->
+          </div>
+        </div>
+      </div>
+
+      <div id="personalTemplate" style="display: none;">
+        <div class="col-md-4">
+          <div class="card mb-4 box-shadow card-watch">
+            <img class="card-img-top imgAlbum" src="images/rolex1.jpg" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Watch Name</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Model Name</h6>
+              <p class="text-watch"></p>
+              <p class="price-watch"></p>
+              <div class="d-flex justify-content-between align-items-center">
               </div>
             </div>
           </div>
